--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="main.js"></script>
 </head>
 <body background="photo.jpg">
+    <script>alert("OLAR, BEM VINIDO")</script>
     <a href="#id1"><h1 style="color: red;">#FEDERAEJCOMP</h1></a>
     <h2>HELLO</h2>
     <h3>HELLO</h3>
